--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "db:dev:restart": "pnpm run db:dev:rm && pnpm run db:dev:up && sleep 1 && pnpm run prisma:dev:deploy",
     "db:dev:rm": "docker compose rm canopus-dev-db -s -f -v",
     "db:dev:up": "docker compose up canopus-dev-db -d",
-    "prisma:dev:deploy": "prisma migrate deploy"
+    "prisma:dev:deploy": "prisma migrate deploy",
+    "start:migrate:deploy": "prisma migrate deploy && npm run start:prod"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.12",
@@ -30,6 +31,7 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/swagger": "^11.0.7",
     "@prisma/client": "^6.5.0",
     "argon2": "^0.41.1",
     "class-transformer": "^0.5.1",
