--- a/package.json
+++ b/package.json
@@ -21,8 +21,19 @@
     "db:dev:restart": "pnpm run db:dev:rm && pnpm run db:dev:up && sleep 1 && pnpm run prisma:dev:deploy",
     "db:dev:rm": "docker compose rm canopus-dev-db -s -f -v",
     "db:dev:up": "docker compose up canopus-dev-db -d",
-    "prisma:dev:deploy": "prisma migrate deploy",
-    "start:migrate:deploy": "prisma migrate deploy && npm run start:prod"
+    "prisma:dev:deploy": "npx prisma migrate deploy",
+    "prisma:generate": "npx prisma generate",
+    "prisma:migrate:dev": "npx prisma migrate dev",
+    "prisma:migrate:deploy": "npx prisma migrate deploy",
+    "prisma:seed": "ts-node prisma/seed.ts",
+    "docker:dev:rm": "docker compose rm -s -f -v",
+    "docker:dev:up": "docker compose up -d",
+    "docker:dev:restart": "pnpm run docker:dev:rm && pnpm run docker:dev:up && sleep 1 && pnpm run prisma:dev:deploy",
+    "docker:dev:logs": "docker compose logs -f",
+    "docker:prod:rm": "docker compose -f docker-compose.prod.yml rm -s -f -v",
+    "docker:prod:up": "docker compose -f docker-compose.prod.yml up -d",
+    "docker:prod:restart": "pnpm run docker:prod:rm && pnpm run docker:prod:up && sleep 1 && pnpm run prisma:migrate:deploy",
+    "docker:prod:logs": "docker compose -f docker-compose.prod.yml logs -f"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.12",
@@ -36,6 +47,7 @@
     "argon2": "^0.41.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cookie-parser": "^1.4.7",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
@@ -48,6 +60,7 @@
     "@nestjs/testing": "^11.0.1",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
+    "@types/cookie-parser": "^1.4.8",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
