--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "start:migrate:deploy": "prisma migrate deploy && npm run start:prod"
   },
   "dependencies": {
+    "@nestjs/axios": "^4.0.0",
     "@nestjs/common": "^11.0.12",
     "@nestjs/config": "^4.0.1",
     "@nestjs/core": "^11.0.1",
@@ -34,6 +35,7 @@
     "@nestjs/swagger": "^11.0.7",
     "@prisma/client": "^6.5.0",
     "argon2": "^0.41.1",
+    "axios": "^1.9.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "passport-jwt": "^4.0.1",
