--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node dist/src/main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -22,7 +22,25 @@
     "db:dev:rm": "docker compose rm canopus-dev-db -s -f -v",
     "db:dev:up": "docker compose up canopus-dev-db -d",
     "prisma:dev:deploy": "prisma migrate deploy",
-    "start:migrate:deploy": "prisma migrate deploy && npm run start:prod"
+    "start:migrate:deploy": "pnpm dlx prisma migrate deploy && npm run start:prod",
+    "docker:build": "docker build -t canopus-backend .",
+    "docker:build:dev": "docker build --target development -t canopus-backend:dev .",
+    "docker:up": "docker compose up -d",
+    "docker:up:dev": "docker compose --profile dev up -d",
+    "docker:down": "docker compose down",
+    "docker:down:volumes": "docker compose down -v",
+    "docker:logs": "docker compose logs -f canopus-api",
+    "docker:logs:dev": "docker compose logs -f canopus-api-dev",
+    "docker:restart": "docker compose restart canopus-api",
+    "docker:shell": "docker compose exec canopus-api sh",
+    "docker:prisma:studio": "docker compose --profile dev up prisma-studio -d",
+    "prisma:studio": "prisma studio",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev",
+    "prisma:migrate:prod": "prisma migrate deploy",
+    "prisma:seed": "prisma db seed",
+    "prisma:reset": "prisma migrate reset",
+    "health:check": "node -e \"require('http').get('http://localhost:4000/health', (res) => { process.exit(res.statusCode === 200 ? 0 : 1) })\""
   },
   "dependencies": {
     "@nestjs/axios": "^4.0.0",
